--- a/views/trangchu.pug
+++ b/views/trangchu.pug
@@ -5,33 +5,44 @@ html(lang="en")
 		meta(name="viewport", content="width=device-width, initial-scale=1")
 		link(rel="stylesheet", href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css")
 		script(src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js")
+		style.
+			button{
+				box-shadow: 0 5px #bbbbbb;
+				border: none;
+				font-size: 20;
+				margin: 1;
+			}
 	body
 		.container
 			#header
 				h1  Shipping Database 
 				a(href="http://localhost:3000")  HomeReset
 				br
-				br
 			#content.well
 				.row
-					.col-sm-5: h3 Search Name
+					.col-sm-5: h4 Search Nam
 						form(action="")
-							input#search_name(type="text")
-					.col-sm-3: h3 Search IMO
+							input#search_name(type="text" autocomplete="off")
+						button#submit_name result
+
+					.col-sm-5: h4 Search IMO
 						form(action="")
-							input#search_imo(type="text")
+							input#search_imo(type="text" autocomplete="off")
 							input#check(type="checkbox" name="check")
-							small Tim kiem chinh xac ma IMO
-				p#list_ship 
+							small Tim chinh xac
+						button#submit_imo result
+
+				div#list_ship 
 
 
 		script.
 			$(document).ready(() => {
 				//search name---------------------------------------------------------------------------
-				$("#search_name").keyup(func = () => {
+				$("#submit_name").click(func = () => {
 					let content = $("#search_name").val();
 					$.post('search_name', 'name='+content, (data, status)=>{
-						let code="<div class='row'>"
+						let code="<small>search for 'name'=/'" + content + "'/</small>"
+								+"<div class='row'>"
 									+"<div class='col-sm-2'> <b>Ten tau</b> </div>"
 									+"<div class='col-sm-2'> <b>IMO</b> </div>"
 									+"<div class='col-sm-4'> <b>Chu tau</b> </div>"
@@ -64,12 +75,13 @@ html(lang="en")
 				});
 
 				//search imo------------------------------------------------------------------------------
-				$("#search_imo").keyup(func2 = () => {
+				$("#submit_imo").click(func2 = () => {
 					let content = $("#search_imo").val();
 					let check = 0;
 					if($('#check').is(':checked')) check = 1;
 					$.post('search_imo', 'imo='+content+'&check='+check, (data, status)=>{
-						let code="<div class='row'>"
+						let code="<small>search for 'imo'=/'" + content + "'/</small>"
+								+"<div class='row'>"
 									+"<div class='col-sm-2'> <b>Ten tau</b> </div>"
 									+"<div class='col-sm-2'> <b>IMO</b> </div>"
 									+"<div class='col-sm-4'> <b>Chu tau</b> </div>"
